cmake_minimum_required(VERSION 3.19)
project(Ejercicio_13_Pilas)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicio_13_Pilas
        .idea/.gitignore
        .idea/Ejercicio_13_Pilas.iml
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        main.cpp)
